--- a/requirements.txt
+++ b/requirements.txt
@@ -118,7 +118,10 @@ python3-openid==3.2.0
 pytz==2020.1
 PyYAML==5.3.1
 qrcode==6.1
-
+channels==3.0.3
+daphne==3.0.1
+Twisted==21.2.0
+twisted-iocpsupport==1.0.1
 stripe==2.55.1
 tablib==2.0.0
 toml==0.10.2
