--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ Django==3.1.1
 django-appconf==1.0.4
 django-staticfiles==1.2.1
 djangorestframework==3.12.4
+gunicorn==20.1.0
 pytz==2021.1
 sqlparse==0.4.1
